--- a/src/i18n/locales/pt.json
+++ b/src/i18n/locales/pt.json
@@ -93,8 +93,7 @@
     "retry": "TENTAR NOVAMENTE",
     "update": "Atualizar",
     "logs": "Registros",
-    "viewDetails": "Ver detalhes",
-    "becomePremium": "Tornar-se Premium",
+    "viewDetails": "Ver detalhes",    "renew": "Renovar",    "becomePremium": "Tornar-se Premium",
     "back": "Voltar"
   },
   "status": {
@@ -322,7 +321,8 @@
     "greeting": "Olá, {name}",
     "promoTitle": "Faça upgrade para Premium",
     "promoMessage": "Atualize para desbloquear mais servidores, maior velocidade e sem limites.",
-    "protected": "Sua conexão está protegida. Verifique os detalhes da sua conta quando necessário."
+    "protected": "Sua conexão está protegida. Verifique os dados da sua conta quando necessário.",
+    "renewSoon": "Seu plano expira em {days}. Renove agora."
   },
   "serverCard": {
     "ariaChooseServer": "Escolher servidor",
